--- a/templates/index.html
+++ b/templates/index.html
@@ -273,12 +273,12 @@ header{
 
     <!-- BODY -->
     <div class="notice-body">
-      <h4>Hôm nay có gì..?</h4>
+      <h4>Xiên Sạch Online</h4>
       <ul>
-        <li>Hôm nay có <b>13 món xiên các loại khác nhau.</b></li>
-        <li>Shop hiện đang có chương trình hấp dẫn dành cho bạn.</li>
-        <li>Hiện tại shop chỉ có 2 loại nước chấm chua ngọt và sốt me</li>
-        <li>Đặt trước giúp shop chuẩn bị kỹ hơn</li>
+        <li>Tưng bừng khai trương quán từ ngày 12/1-15/1</li>
+        <li>Khi mua Combo 2,3 tặng 1 nước Combo 4 tặng 2 nước</li>
+        <li>Ưu đãi áp dụng cho đến khi hết chương trình</li>
+        <li>Hiện tại Shop đang có chương trình tích điểm mọi người chú ý nhé</li>
       </ul>
     </div>
 
@@ -308,39 +308,18 @@ header{
      <div class="notice">
   <div class="notice-title">🔔 Thông báo hôm nay</div>
   <ul>
-    <li>Miễn Phí Ship Đại Học Phenikaa.</li>
-    <li>Hiện tại shop đang mở 13 món xiên.</li>
-    <li>Hiện tại shop chỉ có 2 loại nước chấm chua ngọt và sốt me</li>
-    <li>Cứ đặt combo bất kì được 1 nước miễn phí.</li>
-    <li>Shop nhận đặt trước nhé.</li>
+    <li>Chương trình ưu đãi từ ngày 12/1 đến 15/1</li>
+    <li>Khách hàng đặt Combo sẽ được tặng nước trong ưu đãi</li>
+    <li>Đặt hàng trước sẽ giúp quán có thời gian chuẩn bị kĩ</li>
   </ul>
 </div>
 
 <!-- ===== BẢNG GIÁ XIÊN ===== -->
-<div class="price-board">
-  <h3>🍢 Bảng giá xiên</h3>
 
-  <div class="price-row">
-    <span>Viên ngon loại 1</span>
-    <b>2.000đ ~ 3.000đ</b>
-  </div>
-
-  <div class="price-row">
-    <span>Viên ngon loại 2</span>
-    <b>4.000đ ~ 5.000đ</b>
-  </div>
-
-  <div class="price-row">
-    <span>Viên ngon loại 3</span>
-    <b>6.000đ ~ 7.000đ</b>
-  </div>
-
-<div class="price-row">
-    <span>Khác</span>
-    <b>10.000đ</b>
   </div>
   <div class="price-note">
-    * Xiên lẻ: lựa chọn đơn tối thiểu 70.000đ
+    * Xiên lẻ: lựa chọn đơn tối thiểu 70.000đ<br>
+    * Combo: đặt combo sẽ giúp bạn tiết kiệm tối đa
   </div>
 </div>
 
@@ -375,7 +354,7 @@ header{
 <div class="card">
         <img src="https://sf-static.upanhlaylink.com/img/image_20260102b3c42ad4fd56876dc39e304386ceb777.jpg">
         <h3>Combo Bí Ẩn</h3>
-        <div class="price">299.000</div>
+        <div class="price">259.000</div>
         <button onclick="goMenu()">Xem chi tiết</button>
       </div>
 
