--- a/templates/menu.html
+++ b/templates/menu.html
@@ -225,14 +225,11 @@ html{scroll-behavior:smooth}
   <div class="menu-note-icon"></div>
   <div class="menu-note-text">
     <b>Hình ảnh mang tính chất minh hoạ</b><br>
-    Khách hàng <b>đặt trước bữa ăn</b> sẽ giúp shop chuẩn bị kỹ càng hơn nha.<br>
-    Chúc quý khách ăn ngon miệng, ăn là nhớ tới Xiên Sạch Online.<br>
+    Vào mục <b>Giới Thiệu</b> để xem chi tiết các Combo<br>
     
   </div>
 </div>
 
-
-<!-- ===== COMBO ===== -->
 <!-- ===== COMBO ===== -->
 <div class="section" id="combo">
   <h2>⭐ Combo Best Seller</h2>
@@ -244,7 +241,9 @@ html{scroll-behavior:smooth}
         <img src="https://sf-static.upanhlaylink.com/img/image_202601060015df728392fa8e9ee4e31486c28e57.jpg">
         <div class="card-body">
           <h3>Combo Độc Thân</h3>
-          <div class="desc">Tự Kỉ Ăn Vặt</div>
+          <div class="desc">
+</div>
+
           <div class="price">69.000đ</div>
           <button onclick="addToCart('Combo Độc Thân',69000)">Thêm giỏ</button>
         </div>
@@ -257,7 +256,9 @@ html{scroll-behavior:smooth}
         <img src="https://sf-static.upanhlaylink.com/img/image_202601067c969399b2f919e3dce883c0064ebf35.jpg">
         <div class="card-body">
           <h3>Combo Tình Yêu</h3>
-          <div class="desc">Đôi vợ chồng son</div>
+          <div class="desc">
+            </div>
+
           <div class="price">129.000đ</div>
           <button onclick="addToCart('Combo Tình Yêu',129000)">Thêm giỏ</button>
         </div>
@@ -268,7 +269,9 @@ html{scroll-behavior:smooth}
       <img src="https://sf-static.upanhlaylink.com/img/image_20260106adec8735935fabc54fd2482f3294a11e.jpg">
       <div class="card-body">
         <h3>Combo Tam Chiến</h3>
-        <div class="desc">Bộ 3 rắn độc</div>
+        <div class="desc">
+</div>
+
         <div class="price">199.000đ</div>
         <button onclick="addToCart('Combo Tam Chiến',199000)">Thêm giỏ</button>
       </div>
@@ -278,10 +281,12 @@ html{scroll-behavior:smooth}
       <img src="https://sf-static.upanhlaylink.com/img/image_20260102b3c42ad4fd56876dc39e304386ceb777.jpg">
       <div class="card-body">
         <h3>Combo Bí Ẩn</h3>
-        <div class="desc">60 viên</div>
-        <div class="desc">2 Nước Bí Ẩn?</div>
-        <div class="price">299.000đ</div>
-        <button onclick="addToCart('Combo Bí Ẩn',299000)">Thêm giỏ</button>
+        <div class="desc">
+
+</div>
+
+        <div class="price">259.000đ</div>
+        <button onclick="addToCart('Combo Bí Ẩn',259000)">Thêm giỏ</button>
       </div>
     </div>
 
@@ -293,108 +298,151 @@ html{scroll-behavior:smooth}
   <h2>🍢 Xiên tự chọn</h2>
   <div class="grid">
 
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_20260102efc20b1061cc3c0c7bf3d31b5403b2a2.jpg">
+   <div class="card">
+      <img src="https://sf-static.upanhlaylink.com/img/image_202601098a7558c7254595f4d07fd415a70b9920.jpg">
       <div class="card-body">
         <h3>Xúc Xích</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">10.000đ</div>
-        <button onclick="addToCart('Xúc Xích',10000)">Thêm giỏ</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_2026010229cc60d25c66495723cbddf113ae0268.jpg">
-      <div class="card-body">
-        <h3>Nem Chua Rán</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">10.000đ</div>
-        <button onclick="addToCart('Nem Chua Rán',10000)">Thêm giỏ</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_202601043a2c05d26c12f298a2bae3b31ce672b2.jpg">
-      <div class="card-body">
-        <h3>Gà popcorn</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">6.000đ</div>
-        <button onclick="addToCart('Gà popcorn',6000)">Thêm giỏ</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_20260102ecc9bb8276295f41c20b86ae692f5d22.jpg">
-      <div class="card-body">
-        <h3>Tôm Viên Chiên</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">6.000đ</div>
-        <button onclick="addToCart('Tôm Viên Chiên',6000)">Thêm giỏ</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_202601021e0a6fe2ca48ddc39ebb8268ad6daeb7.jpg">
-      <div class="card-body">
-        <h3>Cá Viên Chiên</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">6.000đ</div>
-        <button onclick="addToCart('Cá Viên Chiên',6000)">Thêm giỏ</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_2026010494cf33f095612086bbf099e581e7dd36.jpg">
-      <div class="card-body">
-        <h3>Xiên Mực Xoắn Ống</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
+        <div class="desc"><b>1 Xiên</b></div>
         <div class="price">12.000đ</div>
-        <button onclick="addToCart('Xiên Mực Xoắn Ống',12000)">Thêm giỏ</button>
+        <button onclick="addToCart('Xúc Xích',12000)">Thêm giỏ</button>
       </div>
     </div>
 
     <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_20260104bd8a1860c19315380a196fdbdddb3073.jpg">
-      <div class="card-body">
-        <h3>Phô Mai Que</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">12.000đ</div>
-        <button onclick="addToCart('Phô Mai Que',12000)">Thêm giỏ</button>
-      </div>
-    </div>
+  <img src="https://sf-static.upanhlaylink.com/img/image_20260109b82e2d313b2b33e7c155bd46bbeec685.jpg">
+  <div class="card-body">
+    <h3>Đậu hũ phô mai</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">10.000đ</div>
+    <button onclick="addToCart('Đậu hũ phô mai',10000)">Thêm giỏ</button>
+  </div>
+</div>
+
 
     <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_2026010429d5eb1f14c86087c340711269ab2bf4.jpg">
-      <div class="card-body">
-        <h3>Xúc xích hồ lô</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">8.000đ</div>
-        <button onclick="addToCart('Xúc xích hồ lô',8000)">Thêm giỏ</button>
-      </div>
-    </div>
+  <img src="https://sf-static.upanhlaylink.com/img/image_20260109dee9bc5ddcb1bd4aef419a3d9994d81a.jpg">
+  <div class="card-body">
+    <h3>Sủi cảo</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Sủi cảo',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
+<div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_2026010912574509d5323a940331bc2811f98ad5.jpg">
+  <div class="card-body">
+    <h3>Viên chả hải sản</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Viên chả hải sản',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
 
     <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_20260104bd8a1860c19315380a196fdbdddb3073.jpg">
-      <div class="card-body">
-        <h3>Xiên Tôm Con</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">12.000đ</div>
-        <button onclick="addToCart('Xiên Tôm Con',12000)">Thêm giỏ</button>
-      </div>
-    </div>
+  <img src="https://sf-static.upanhlaylink.com/img/image_202601097a5e3b6b84d673d4a496ca558456ba93.jpg">
+  <div class="card-body">
+    <h3>Phô mai que</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">10.000đ</div>
+    <button onclick="addToCart('Phô mai que',10000)">Thêm giỏ</button>
+  </div>
+</div>
+
 
     <div class="card">
-      <img src="https://sf-static.upanhlaylink.com/img/image_2026010480bdd7906aca05d480032ed1aa6c8cce.jpg">
-      <div class="card-body">
-        <h3>Mực Khoanh</h3>
-        <div class="desc"><b>1 Xiên - 1 Cái</b></div>
-        <div class="price">12.000đ</div>
-        <button onclick="addToCart('Mực Khoanh',12000)">Thêm giỏ</button>
-      </div>
-    </div>
+  <img src="https://sf-static.upanhlaylink.com/img/image_2026010480bdd7906aca05d480032ed1aa6c8cce.jpg">
+  <div class="card-body">
+    <h3>Mực khoanh nugget</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Mực khoanh nugget',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_202601043a2c05d26c12f298a2bae3b31ce672b2.jpg">
+  <div class="card-body">
+    <h3>Gà popcorn</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Gà popcorn CP',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_2026010429d5eb1f14c86087c340711269ab2bf4.jpg">
+  <div class="card-body">
+    <h3>Xúc xích hồ lô Thái</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Xúc xích hồ lô Thái HM',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_202601090dd1c1e96f9c85ebe00586a07483f576.jpg">
+  <div class="card-body">
+    <h3>Viên thả lẩu trứng cá</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">9.000đ</div>
+    <button onclick="addToCart('Viên thả lẩu trứng cá',9000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_2026010906c832efd3bd4d87ebc61ed7fc64125a.jpg">
+  <div class="card-body">
+    <h3>Tôm con định hình</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">9.000đ</div>
+    <button onclick="addToCart('Tôm con định hình',9000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_202601021e0a6fe2ca48ddc39ebb8268ad6daeb7.jpg">
+  <div class="card-body">
+    <h3>Cá viên</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">6.000đ</div>
+    <button onclick="addToCart('Cá viên',6000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_20260102ecc9bb8276295f41c20b86ae692f5d22.jpg">
+  <div class="card-body">
+    <h3>Tôm viên</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">6.000đ</div>
+    <button onclick="addToCart('Tôm viên',6000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
+    <div class="card">
+  <img src="https://sf-static.upanhlaylink.com/img/image_20260109371f696be03cec30caf9a0d99c024b8a.jpg">
+  <div class="card-body">
+    <h3>Chả mực xoắn ống</h3>
+    <div class="desc"><b>1 Xiên</b></div>
+    <div class="price">8.000đ</div>
+    <button onclick="addToCart('Chả mực xoắn ống',8000)">Thêm giỏ</button>
+  </div>
+</div>
+
+
 
   </div>
 </div>
+
 
 <!-- ===== NƯỚC ===== -->
 <div class="section" id="nuoc">
@@ -404,7 +452,7 @@ html{scroll-behavior:smooth}
     <div class="card">
       <img src="https://sf-static.upanhlaylink.com/img/image_202601061b0ee7217bff7a0c554808d5d90ff20d.jpg">
       <div class="card-body">
-        <h3>Trà tắc</h3>
+        <h3>Trà tắc (600ml)</h3>
         <div class="price">15.000đ</div>
         <button onclick="addToCart('Trà tắc',15000)">Thêm giỏ</button>
       </div>
