--- a/templates/success.html
+++ b/templates/success.html
@@ -147,7 +147,7 @@ h1{
   <div class="card">
 
     <h1>Đặt hàng thành công</h1>
-    <div class="sub">Đơn hàng đã được ghi nhận – vui lòng thanh toán</div>
+    <div class="sub">Vui lòng thanh toán</div>
 
     <!-- AMOUNT -->
     <div class="amount-card">
